--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,14 @@
-# Use official .NET SDK image to build the app
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+# Use .NET 9 SDK for build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-
-# Copy and restore dependencies
 COPY *.csproj .
 RUN dotnet restore
 
-# Copy all source files and publish
 COPY . .
 RUN dotnet publish -c Release -o /app
 
-# Use runtime-only image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+# Use .NET 9 runtime
+FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
 COPY --from=build /app .
 EXPOSE 8080
