app settings update

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=postgresql://simplecrudappdb_user:w74wZTI91nIuQnY8AhIrcdbGzspSA9zv@dpg-d3m0nihr0fns73ecdfvg-a/simplecrudappdb;Database=simplecrudappdb;Username=simplecrudappdb_user;Password=w74wZTI91nIuQnY8AhIrcdbGzspSA9zv;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
     }
-  },
-  "AllowedHosts": "*"
 }
