--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=postgresql://simplecrudappdb_user:w74wZTI91nIuQnY8AhIrcdbGzspSA9zv@dpg-d3m0nihr0fns73ecdfvg-a/simplecrudappdb;Database=simplecrudappdb;Username=simplecrudappdb_user;Password=w74wZTI91nIuQnY8AhIrcdbGzspSA9zv;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+        "DefaultConnection": "Host=dpg-d3m0nihr0fns73ecdfvg-a/simplecrudappdb;Database=simplecrudappdb;Username=simplecrudappdb_user;Password=w74wZTI91nIuQnY8AhIrcdbGzspSA9zv;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
     }
 }
